--- a/src/css/cartcontainer.css
+++ b/src/css/cartcontainer.css
@@ -1,3 +1,13 @@
 .cartcontainer{
     text-align: center;
 }
+.price-text{
+    float:right;
+    font-size: 42px;
+}
+@media only screen 
+  and (max-device-width: 967px) {
+    .price-text{
+        float:none;
+    }
+  }
