edited card responsiveness 2

--- a/src/css/cartcontainer.css
+++ b/src/css/cartcontainer.css
@@ -1,6 +1,9 @@
-.cartcontainer{
+#emptycart{
     text-align: center;
 }
+/* .card-content{
+    text-align: left;
+} */
 .price-text{
     float:right;
     font-size: 42px;
