--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    margin:30px !important;
-    background-color:black;
+    margin:80px;
+    background-color:#DCDCDC;
 }
-h2{
-    font-size: 100px;
-}
-
-/* Maybe make another ccs file elsewhere without writing inline styles */
+@media only screen 
+  and (max-device-width: 967px) {
+    body{
+        margin:5px;
+    }
+  }
