--- a/src/css/button.css
+++ b/src/css/button.css
@@ -11,6 +11,20 @@
 .buttontest:hover{
     background-color: #4682B4; 
 }
+.checkout-btn{
+    width: 25%;
+    padding: 1%;
+}
+.checkout-btn:disabled:hover{
+    background-color:#57A0D3;
+}
+@media only screen 
+  and (max-device-width: 967px) {
+    .checkout-btn{
+        width: 100%;
+        padding: 2%;
+    }
+  }
 /* button:disabled {
     border: 1px solid transparent;
     border-radius: 20px; 
