edited media queries to fix responsiveness issues

--- a/src/css/cartcontainer.css
+++ b/src/css/cartcontainer.css
@@ -9,7 +9,7 @@
     font-size: 42px;
 }
 @media only screen 
-  and (max-device-width: 967px) {
+  and (max-width: 967px) {
     .price-text{
         float:none;
     }
