--- a/src/css/button.css
+++ b/src/css/button.css
@@ -19,17 +19,10 @@
     background-color:#57A0D3;
 }
 @media only screen 
-  and (max-device-width: 967px) {
+  and (max-width: 967px) {
     .checkout-btn{
         width: 100%;
         padding: 2%;
     }
   }
-/* button:disabled {
-    border: 1px solid transparent;
-    border-radius: 20px; 
-    padding: 7px;
-    width: 120px;
-    background-color:black;
-    color:#fffafa;
-} */
+
